--- a/servidor/templates/camara.html
+++ b/servidor/templates/camara.html
@@ -1,42 +1,5 @@
 <html>
 <head>
-  <script>
-    // Cuenta el tiempo de escaneo y calcula el porcentaje restante 
-    // Set the date we're counting down to
-    var tiempo = 6; // Tiempo que tarda en procesarse todos los datos para que se habilite el boton VerResultado
-    var countDownDate = new Date().getTime();
-    countDownDate += 1000*60*tiempo;
-    contador = false;
-    // Update the count down every 1 second
-    var x = setInterval(function() {
-        // Get todays date and time
-        var now = new Date().getTime();
-        // Find the distance between now an the count down date
-        var distance = countDownDate - now;
-        var ms = tiempo*60000/1 // Pasa de minutos a ms para calcular el porcentaje
-        var porcentaje = (100 - (distance * 100 / ms)).toFixed(2);;    // toFixed se queda con dos digitos despues de la coma   
-        // Time calculations for minutes and seconds
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-        // If the count down is over, write some text 
-        if (distance <= 0) {
-          contador = false;
-          window.location.reload(1);
-        }
-        // Output the result in an element with id="demo"
-        if (contador == true) {
-          document.getElementById("demo").innerHTML =  minutes + "m " + seconds + "s ";
-          document.getElementById("porcentaje").innerHTML =  porcentaje + "%";
-        }
-    }, 1000); // Cada cuánto tiempo cuenta
-
-    function start_contador(){
-      contador = true;
-      countDownDate = new Date().getTime();
-      countDownDate += 1000*60*tiempo; 
-    }
-  </script>
-
   <meta charset="utf-8">
 
   <link type="text/css" rel="stylesheet" href="../static/bootstrap/css/bootstrap.css" media="all">
@@ -70,6 +33,7 @@
             <div class="row justify-content-center">
               <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
                 <h1 style="font-family: 'Merienda One';">Dispositivo generador de imágenes termográficas</h1>
+                <a id="botonNaranja" class="btn btn-md btn-success" name="ver" data-toggle="tooltip" data-placement="right" title="Luego presione Start" role="button" onclick="window.open('/lee_datos'); start_contador()">Leer Datos</a>
               </div>
             </div>
           </div>
@@ -140,41 +104,8 @@
         </div>
       </section>
 
-      <hr class="hr">
-
-      <section>
-
-        <form action="/camara" method="POST">
-          <div class="container">
-            <div class="col-xs-12 col-sm-6 col-md-5">
-              <p><a class="btn btn-md btn-success" name="ver" role="button" {{resultado}}>Ver Resultado</a></p>
-              <p><a id="botonNaranja" class="btn btn-md btn-success" name="ver" data-toggle="tooltip" data-placement="right" title="Luego presione Start" role="button" onclick="window.open('/lee_datos'); start_contador()">Leer Datos</a></p>
-            </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <label class="labelPanel" >Temperatura Mínima: &nbsp<span class="badge">{{tempmin}} °C</span></label>
-              <br><br>
-
-              <label class="labelPanel">Temperatura Máxima: &nbsp<span class="badge">{{tempmax}} °C</span></label>
-              <br><br>
-
-              <label class="labelPanel">Porcentaje Escaneado: &nbsp<span class="badge" id="porcentaje">{{porcentaje}} %</span></label>
-              <br><br>
-
-              <label class="labelPanel">Tiempo Restante: &nbsp<span class="badge" id="demo">{{tiempo}} Segundos</span></label>
-              <br><br>
-
-              <label class="labelPanel">Resolución:&nbsp<span class="badge">36 x 180</span></label>
-            </div>
-          </div>
-        </form>
-      </section>
-
-      <br>
     </div>
   </main>
-
-  <hr class="hr">
 
   <footer>
     <a class="footer-item" href="/">Inicio</a>
