Botones web funcionales

--- a/servidor/templates/escaner.html
+++ b/servidor/templates/escaner.html
@@ -10,7 +10,7 @@
   <link type="text/css" rel="stylesheet" href="../static/stylesheets/custom.css" media="all">
   <link rel="stylesheet" href="../static/stylesheets/merienda-one.css">
 
-  <script src="../static/js/jquery-3.js"></script>
+  <script src="../static/js/jquery-3.3.1.min.js"></script>
   <script src="../static/js/chronometer.js"></script>
   <script src="../static/js/countdown.js"></script>
 
@@ -46,13 +46,13 @@
               </div>
           
               <div class="text-center" style="margin-top:25px;">
-                <a  id="btn_play" type="button" class="btn btn-light">
+                <a  id="btn_play" value="1" type="button" class="btn btn-light">
                   <span class="fas fa-play"></span>
                 </a>
-                <a  id="btn_pause" type="button" class="btn btn-light">
+                <a  id="btn_pause" value="2" type="button" class="btn btn-light">
                   <span class="fas fa-pause"></span>
                 </a>
-                <a  id="btn_stop" type="button" class="btn btn-light">
+                <a  id="btn_stop" value="3" type="button" class="btn btn-light">
                   <span class="fas fa-stop" ></span>
                 </a>
               </div>
