Tomado de imagenes andando

--- a/servidor/templates/camara.html
+++ b/servidor/templates/camara.html
@@ -33,7 +33,7 @@
             <div class="row justify-content-center">
               <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
                 <h1 style="font-family: 'Merienda One';">Dispositivo generador de imágenes termográficas</h1>
-                <a id="botonNaranja" class="btn btn-md btn-success" name="ver" data-toggle="tooltip" data-placement="right" title="Luego presione Start" role="button" onclick="window.open('/lee_datos'); start_contador()">Leer Datos</a>
+                <a id="botonNaranja" class="btn btn-md btn-success" name="ver" data-toggle="tooltip" data-placement="right" title="Luego presione Start" role="button" onclick="window.open('/escaner'); start_contador()">Leer Datos</a>
               </div>
             </div>
           </div>
